2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: add LIBPANEL_APPLET_LIBS to LDADD since we don't really
	use the libpanel-applet pkg-config file. Fix build issue with
	"-Wl,-z,defs".

==================== 2.25.3 ====================

2008-12-13  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: show day of week header in "set time" calendar
	Fix bug #564407.

2008-12-11  Vincent Untz  <vuntz@gnome.org>

	* clock-utils.[ch]: (clock_utils_display_help): get rid of
	gnome_help_display_desktop_on_screen(), and improve code
	* clock.c: (prefs_help), (display_help_dialog): trivial update

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* obox.[ch]: (clock_obox_finalize), (clock_obox_class_init),
	(clock_obox_init), (get_class): g_type_class_peek() does not create a
	type if the class wasn't used before, so we need to call
	g_type_class_ref() (and later, g_type_class_unref())

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* obox.[ch]: (na_obox_finalize), (na_obox_class_init), (na_obox_init),
	(get_class): g_type_class_peek() does not create a type if the class
	wasn't used before, so we need to call g_type_class_ref() (and later,
	g_type_class_unref())

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* clock-face.c: (draw):
	s/gdk_pixbuf_render_to_drawable/gdk_draw_pixbuf/ (no deprecated API)
	* clock-location-tile.h: single include for gtk+
	* clock-map.c: (clock_map_finalize), (clock_map_refresh),
	(clock_map_mark), (clock_map_place_locations),
	(clock_map_render_shadow): s/gdk_pixbuf_unref/g_object_unref/ (no
	deprecated API)
	* clock-utils.h: single include for gtk+
	* clock.c: add missing include for glib/gi18n.h
	* obox.[ch]: single include for gtk+
	(get_class): s/gtk_type_class/g_type_class_peek/ (no deprecated API)

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* calendar-sources.c: define HANDLE_LIBICAL_MEMORY to avoid warning
	during compilation

2008-12-09  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: remove fixed width for buttons.