@@ -99,7 +99,7 @@
 	      <property name="spacing">18</property>
 
 	      <child>
-		<widget class="GtkVBox" id="vbox18">
+		<widget class="GtkVBox" id="clock-options">
 		  <property name="visible">True</property>
 		  <property name="homogeneous">False</property>
 		  <property name="spacing">6</property>
